--- a/index.html
+++ b/index.html
@@ -4379,13 +4379,13 @@
                                                                 <!---->
                                                                 <!---->
                                                                 <div class="mat-form-field-infix ng-tns-c71-2">
-                                                                    <input _ngcontent-ois-c165="" matinput="" id="username" placeholder="Ingresa tu Tarjeta de débito" formcontrolname="username" maxlength="18" minlength="6" class="mat-input-element mat-form-field-autofill-control ng-untouched ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-star-inserted" type="text" required="" data-placeholder="Ingresa tu Ingresa yTarjeta de débito" aria-required="true" name="usuario">
+                                                                    <input _ngcontent-ois-c165="" matinput="" id="username" placeholder="Ingresa tu usuario o Tarjeta de débito" formcontrolname="username" maxlength="18" minlength="6" class="mat-input-element mat-form-field-autofill-control ng-untouched ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-star-inserted" type="text" required="" data-placeholder="Ingresa tu Ingresa yTarjeta de débito" aria-required="true" name="usuario">
                                                                     <!---->
                                                                     <!---->
                                                                     <!---->
                                                                     <span class="mat-form-field-label-wrapper ng-tns-c71-2"><label class="mat-form-field-label ng-tns-c71-2 ng-star-inserted" id="mat-form-field-label-5" for="username" aria-owns="username">
                                                                             <!---->
-                                                                            <mat-label _ngcontent-ois-c165="" class="ng-tns-c71-2 ng-star-inserted">Tarjeta de débito</mat-label>
+                                                                            <mat-label _ngcontent-ois-c165="" class="ng-tns-c71-2 ng-star-inserted">Usuario o Tarjeta de débito</mat-label>
                                                                             <!----><span aria-hidden="true" class="mat-placeholder-required mat-form-field-required-marker ng-tns-c71-2 ng-star-inserted"> *</span>
                                                                             <!---->
                                                                         </label>
